--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,93 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0f172a;
+  --secondaryBackground: #141d31;
+  --primary: #a855f7;
+  --primaryHover: #8245C4;
+  --secondary: #e92e79;
+  --navigationBar: #1e293b;
+  --cardPrimary: #161f33;
+  --stroke: #334155;
+  --textPrimary: #d6e0eb;
+  --textSecondary: #94a3b8;
+  --btnPrimaryRegular: #1e2a43;
+  --btnSecondaryRegular: #D3A5FF;
+  --primaryGradient: linear-gradient(90deg, #b371f1 0%, #f6ecff 100%);
+  --white: #ffffff;
+  --black: #000000;
+  --success: #03ad8d;
+  --error: #b84733;
+  --warning: #f2a155;
+
+  --maxWidthContainer: 1490px;
 }
 
-@theme inline {
+@theme {
   --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-secondaryBackground: var(--secondaryBackground);
+  --color-primary: var(--primary);
+  --color-primaryHover: var(--primaryHover);
+  --color-secondary: var(--secondary);
+  --color-navigationBar: var(--navigationBar);
+  --color-cardPrimary: var(--cardPrimary);
+  --color-stroke: var(--stroke);
+  --color-textPrimary: var(--textPrimary);
+  --color-textSecondary: var(--textSecondary);
+  --color-btnPrimaryRegular: var(--btnPrimaryRegular);
+  --color-btnSecondaryRegular: var(--btnSecondaryRegular);
+  --color-primaryGradient: var(--primaryGradient);
+  --color-white: var(--white);
+  --color-black: var(--black);
+  --color-success: var(--success);
+  --color-error: var(--error);
+  --color-warning: var(--warning);
+
+
+  --maxWidthContainer: var(--maxWidthContainer);
+
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  :root {}
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+body {}
+
+
+
+
+/* 
+  Search Scroll Bar
+*/
+
+.custom-scrollbar {
+  scrollbar-width: thin;
+  /* Firefox */
+  scrollbar-color: var(--color-primary) var(--color-navigationBar);
+  /* thumb color, track color */
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: var(--color-navigationBar);
+  /* track color */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--color-primary);
+  /* thumb color */
+  border-radius: 6px;
+  border: 2px solid var(--color-navigationBar);
+  /* padding around thumb */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-primary);
+  /* lighter thumb on hover */
+}
+
+
